python/testData/inspections/pyLazyImportInspection/insideFunction.py
def f():
    <error descr="lazy imports must appear at module level">lazy</error> import os
